package com.wordpython.decorator;

public class Espresso extends Coffee {

	public Espresso() {
		setDes(" 意大利咖啡 ");
		setPrice(6.0f);
	}
}
